--- a/boss.ini
+++ b/boss.ini
@@ -286,32 +286,32 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 
 mungtime = 0
 
-bossname = 칼리바
-gentime = 12:00
+bossname = 할리스톤
+gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 붕괴으로 오세요 ~!!! 앞으로 01시간 안에 뜸니다. !! 
+alert_ment = 탐 입니다.
 mungtime = 0
 
-bossname = 칼리바2
-gentime = 12:00
+bossname = 세필라
+gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 붕괴으로 오세요 ~!!! 앞으로 01시간 안에 뜸니다. !!
+alert_ment = 탐 입니다. 
 mungtime = 0
 
-bossname = 린드르
-gentime = 12:00
+bossname = 푸스카
+gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 붕괴으로 오세요 ~!!! 앞으로 01시간 안에 뜸니다. !!
+alert_ment = 탐 입니다. 
 mungtime = 0
 
-bossname = 린드르2
-gentime = 12:00
+bossname = 그라일
+gentime = 24:00
 nogencheck = 0
 before_alert_ment = 입니다
-alert_ment = 탐 입니다. 붕괴으로 오세요 ~!!! 앞으로 01시간 안에 뜸니다. !!
+alert_ment = 탐 입니다.
 mungtime = 0
 
 bossname = 라우디
